    #70: Inconsistent bounds, insets and baselines on Windows Vista.
    #71: Password echo character too small on Windows Vista.
    #73: Windows L&f ignores the desktop control font size setting.
    #79: Windows combobox too narrow.
    #80: Plastic combo arrow button is focusable in Java 6.
    #81: Wrong icon for "OptionPane.questionIcon" property.
    #84: Windows L&F combo margin too wide in table.
    #86: Windows combobox too narrow if the renderer has zero insets.
    

NEW FEATURES
    
    #55: Add option to make combo popups wider than the combo.
    o Narrow buttons can be disabled in the system properties.
    o Added a JPopupMenu client property for no-margin borders,
      see Options#NO_MARGIN_KEY. This is useful if a JPopupMenu 
      contains a single component, for example a JScrollPane.


DISTRIBUTION CHANGES

    o Merged the source folders 'src/common', 'src/plastic'
      and 'src/windows' to 'src/core'.
    o The sources no longer ship as a source Zip archive.
      They now come in the directory structure used by the CVS. 
      This makes it easier to build the distribution using ANT.     
      If you want to attach the library sources in an IDE, 
      point to folder 'src/core'.
    
    
OTHER CHANGES

    o The Windows and Plastic L&fs have been tweaked for Windows Vista.
    o Overhauled the Windows combobox layout and rendering.
    o Improved appearance of the Looks demo tabs on Windows.
    o Password field antialiasing honors the field's aa hint
      and uses subpixel aa if available.
    
    
    
---------------------------------------------------------------------------

Find below the change history for older releases.



                    JGoodies Looks, Version 1.3.2 
                            Release Notes
                        

INTRODUCTION

    This update fixes a couple of bugs, most noticably in the drop shadow 
    feature. Also the source code style has been slightly improved.


BUGS FIXED
