@@ -87,8 +87,8 @@
 	(Plastic -> Metal, JGoodies Windows -> Sun Windows).
 	If you have found a bug, please provide the following information:
 	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
-	Look&amp;feel used. For example: Sun J2SE 1.4.2_05, Windows 2000,
-	Looks 1.3, PlasticXP.
+	Look&amp;feel used. For example: Sun Java 1.5.0_06, Windows XP,
+	Looks 1.3.2, PlasticXP.
 
 
     <h3>Features</h3>
@@ -96,12 +96,10 @@
 	<p><strong>JGoodies Windows L&amp;F :: Precise Emulation</strong><br>
 
 	The JGoodies Windows look&amp;feel focuses on a precise emulation
-	on Windows 95/98/NT/ME/2000 in the following areas: 
+	on Windows 95/98/NT/ME/2000/2003/XP in the following areas: 
 	menus, icons, colors, borders, fonts, font sizes, insets, and widget dimensions.
-	It honors the screen resolution (96dpi vs. 120 dpi)
+	It honors the screen resolution (96dpi vs. 120 dpi) and
 	to adjust sizes, insets, and widget dimensions.
-	The Windows XP emulation still lags behind the classic emulation,
-	nevertheless it has been improved significantly in the Looks version 1.2.
 
 
     <p><strong>High-Fidelity Multi Platform Appearance</strong><br>
@@ -116,8 +114,8 @@
 	<p><strong>Simplifying Multi Platform Support</strong><br>
 
 	The looks help you support different Java versions and operating systems.
-	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
-	and 1.5 - to the possible extent w. r. t. to features of the underlying Swing API.
+	Each look is consistent over the Java versions 1.4.1x, 1.4.2x, 1.5,
+	and 1.6 betas - to the possible extent w. r. t. to features of the underlying Swing API.
 
 	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X Aqua look
 	use similar widget dimensions and widget font baselines to minimize layout 
